# deckforge

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE.txt  README.md  blockchain.json  config.toml  config.yaml  deckforge.json  pyproject.toml  service_account.json
deckforge/blockchain/: chain.py  contracts.py  core.py  crypto.py
deckforge/card/: TradingCard.py  card.py  core.py  minter.py
deckforge/commands/: auth.py  cardadmin.py  server.py  update.py  wallet.py
deckforge/commands/templates/: index.html
deckforge/core/: config.py  path.py
deckforge/google/: auth.py  drive.py  sheets.py
deckforge/wallet/: core.py  wallet.py
documentation/: README.md  getting-started.md  references.md
src/: config.rs  error.rs  main.rs
src/api/: middleware.rs  server.rs
src/auth/: keys.rs
src/blockchain/: block.rs  chain.rs  deckchain.rs  mod.rs  testing.rs  transaction.rs
src/card/: card.rs  mod.rs  series.rs  seriesrelease.rs  seriesreleasestate.rs
src/commands/: commands.rs  keys.rs
src/crypto/: keypair.rs  mod.rs  wallet.rs
src/logging/: server.rs
test/: series.json
