
[package]
name = "deckforge"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.23", features = ["derive"] }
dialoguer = "0.11.0"
env_logger = "0.11.5"
hex = "0.4.3"
hyper = { version = "0.14.31", features = ["server", "client", "tcp", "http1", "http2"] }
lazy_static = "1.4.0"
log = "0.4"
matchit = "0.8.5"
password-hash = "0.5.0"
pem = "3.0.4"
quanta = "0.12.4"
rand = "0.8.5"
secp256k1 ={ version = "0.30.0", features = ["hashes", "rand"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 ={ version = "0.10.8", features = ["std"] }
tempdir = "0.3.7"
tokio = { version = "1.42.0", features = ["full"] }
toml = "0.8.19"
uuid = { version = "1", features = ["v4"] }