
[package]
name = "deckforge"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = "0.7"
clap = { version = "4.5.23", features = ["derive"] }
dialoguer = "0.11.0"
hex = "0.4.3"
pem = "3.0.4"
rand = "0.8.5"
secp256k1 = { version = "0.30.0", features = ["hashes", "rand"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = { version = "0.10.8", features = ["std"] }
thiserror = "2"
tokio = { version = "1.42.0", features = ["rt-multi-thread", "macros", "time", "net"] }
toml = "0.8.19"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3"
