[tool.poetry]
name = "deckforge"
version = "0.1.0"
description = ""
authors = ["Jacob Sanford <jacob.josh.sanford@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
cryptography = "^43.0.1"
ecdsa = "^0.19.0"
flask = "^3.0.3"
google-api-python-client = "^2.151.0"
gspread = "^6.1.3"
oauth2client = "^4.1.3"
web3 = "^7.3.1"

[tool.poetry.scripts]
"server" = "deckforge.commands.server:start_api_server"
"wallet:generate" = "deckforge.commands.wallet:generate_wallet"
"card:write-metadata" = "deckforge.commands.update:get_latest_card_metadata"
"card:admin" = "deckforge.commands.cardadmin:start_admin_server"
"test" = "deckforge.commands.auth:test_google_drive"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
